syntax = "proto3";
package imageprocessing;

message Image {
    uint32 width = 1;
    uint32 height = 2;
    ImageType image_type = 3;
    bytes data = 4;
    Invert invert = 5;
    EdgeDetect edge_detect = 6;
    BoxBlur box_blur = 7;
}

enum ImageType {
    RGBA = 0;
    RGB = 1;
    GRAY = 2;
    GRAYALPHA = 3;
}

message Invert {}

message EdgeDetect {
    uint32 threshold = 1;
}

message BoxBlur {
    // must be odd in size
    uint32 kernel_width = 1;
}

message ResultImage {
    uint32 width = 1;
    uint32 height = 2;
    ImageType image_type = 3;
    bytes data = 4;
}

service ImageProcessing {
    rpc ProcessImage (Image) returns (ResultImage);
}